# Python

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: github-actions-demo.yml  test.yml
django/: settings.py
fastapi/: README.md  apps_struct.txt  config  examples_logging  examples_models.py  examples_views.py  func_struct.txt  service-obj_sctruct  struct_
python/bin_operations/: bin.py
python/test/: test_bin.py
ruff/: ruff_cfg
