[tool.poetry]
name = "python"
version = "0.1.0"
description = "Dmitry Python tricks"
authors = ["Dmitry <di.mesler.2010@yandex.ru>"]
readme = "README.md"
packages = [
	{ include = "python" },
]
repository = "https://github.com/Pryanik0071/Python"

[tool.poetry.dependencies]
python = "^3.11.0"
pytest = "^7.2.0"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
